# sillygrad

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  engine.cpp  engine.h  main.cpp  mnist  mnist.cpp  nn.cpp  nn.h  ops.cpp  ops.cu  tensor.cpp  tensor.h
test/: a  a.out  main.cpp  test.cpp
tests/: tensor_tests.cpp
